--- a/ConsoleApplication55.vcxproj.filters
+++ b/ConsoleApplication55.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClCompile Include="InputErrors.cpp">
       <Filter>Заголовочные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="report.cpp">
+      <Filter>Заголовочные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
