--- a/ConsoleApplication55.vcxproj.filters
+++ b/ConsoleApplication55.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClCompile Include="report.cpp">
       <Filter>Заголовочные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="cafe.cpp">
+      <Filter>Заголовочные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
