--- a/ConsoleApplication55.vcxproj
+++ b/ConsoleApplication55.vcxproj
@@ -79,20 +79,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="outputChecks.txt" />
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cafe.h" />
+    <ClInclude Include="Cashbox.h" />
+    <ClInclude Include="Error.h" />
     <ClInclude Include="header.h" />
+    <ClInclude Include="Kitchen.h" />
+    <ClInclude Include="Menu.h" />
+    <ClInclude Include="Report.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cafe.cpp" />
-    <ClCompile Include="check.cpp" />
-    <ClCompile Include="InputErrors.cpp" />
+    <ClCompile Include="kitchen.cpp" />
+    <ClCompile Include="menu.cpp" />
+    <ClCompile Include="error.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="inoutput.cpp" />
+    <ClCompile Include="cashbox.cpp" />
     <ClCompile Include="report.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
